@@ -1,3 +1,6 @@
+* #2018 Rename Save to Keep. (marco)
+* #2020 Rename Close to Stop. (marco)
+
 Snapshot 42f0bcc48d
 
 * Fix broken import which was preventing startup. (marco)
